WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163793
[Web IDL] MediaControlsHost has invalid operation overloads
https://bugs.webkit.org/show_bug.cgi?id=163793
Summary
[Web IDL] MediaControlsHost has invalid operation overloads
Chris Dumez
Reported
2016-10-21 09:53:33 PDT
MediaControlsHost has invalid operation overloads: - sortedTrackListForMenu() - displayNameForTrack() The parameter is nullable for both overloads which is not valid IDL.
Attachments
Patch
(6.47 KB, patch)
2016-10-21 10:41 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-10-21 10:41:49 PDT
Created
attachment 292371
[details]
Patch
WebKit Commit Bot
Comment 2
2016-10-21 11:55:51 PDT
Comment on
attachment 292371
[details]
Patch Clearing flags on attachment: 292371 Committed
r207690
: <
http://trac.webkit.org/changeset/207690
>
WebKit Commit Bot
Comment 3
2016-10-21 11:55:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug